# xlr

./: .autorc  .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  WORKSPACE  eslint.config.mts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.mts
.circleci/: config.yml
.devcontainer/: devcontainer.json
converters/: BUILD  README.md  package.json
converters/src/: index.ts  ts-to-xlr.ts  xlr-to-ts.ts
converters/src/__tests__/: annotations.test.ts  common-to-ts.test.ts  documentation.test.ts  export-to-ts.test.ts  heritage-additional-properties.test.ts  player.test.ts  ts-to-common.test.ts  ts-utils.test.ts
converters/src/__tests__/__snapshots__/: export-to-ts.test.ts.snap
converters/src/helpers/: converter.ts  writeManifest.ts
converters/src/ts/: annotations.ts  documentation.ts  ts-to-xlr.ts  ts-utils.ts  xlr-to-ts.ts
helpers/static-xlrs/: BUILD  package.json
helpers/static-xlrs/src/core/xlr/: manifest.d.ts
helpers/static-xlrs/src/expression/xlr/: manifest.d.ts
helpers/static-xlrs/src/plugin/xlr/: manifest.d.ts
helpers/test-utils/: BUILD  package.json
scripts/: release.sh
sdk/: BUILD  README.md  package.json
sdk/src/: sdk.ts  types.ts  utils.ts  validator.ts
sdk/src/__tests__/: sdk.test.ts
sdk/src/registry/: basic-registry.ts  types.ts
types/javascript/: BUILD  README.md  package.json
types/kotlin/: BUILD.bazel  pom.tpl
types/kotlin/src/main/kotlin/com/intuit/playerui/xlr/: XlrDeserializer.kt  XlrGuards.kt  XlrJson.kt  XlrSerializer.kt  XlrTypes.kt  XlrUtility.kt
types/kotlin/src/test/kotlin/com/intuit/playerui/xlr/: AllTests.kt  TestFixtures.kt  XlrDeserializerTest.kt  XlrGuardsTest.kt  XlrSerializerTest.kt  XlrTypesTest.kt  XlrUtilityTest.kt
types/python/: BUILD
utils/: BUILD  README.md  package.json
utils/src/: documentation.ts  index.ts  ts-helpers.ts  type-checks.ts  validation-helpers.ts  xlr-helpers.ts
utils/src/__tests__/: annotations.test.ts  documentation.test.ts  ts-helpers.test.ts  validation-helpers.test.ts  xlr-helpers.test.ts
