load("@rules_player//kotlin:defs.bzl", "kt_jvm")
load("@rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin")
load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@rules_kotlin//kotlin:lint.bzl", "ktlint_config")
load("@build_constants//:constants.bzl", "GROUP", "VERSION")

package(default_visibility = ["//visibility:public"])

ktlint_config(
    name = "lint_config",
    editorconfig = ".editorconfig",
)

kt_compiler_plugin(
    name = "serialization_plugin",
    compile_phase = True,
    id = "org.jetbrains.kotlin.serialization",
    stubs_phase = True,
    deps = [
        "@rules_kotlin//kotlin/compiler:kotlin-serialization-compiler-plugin",
    ],
)

kt_jvm_library(
    name = "kotlin_serialization",
    srcs = [],
    exported_compiler_plugins = [":serialization_plugin"],
    exports = [
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
    ],
)

kt_jvm(
    name = "xlr-types",
    group = GROUP,
    version = VERSION,
    lint_config = ":lint_config",
    main_opts = "//:kt_opts",
    main_deps = [
        ":kotlin_serialization",
        "@maven//:org_jetbrains_kotlin_kotlin_stdlib",
    ],
    test_package = "com.intuit.playerui.xlr",
    test_opts = "//:kt_opts",
    test_deps = [
        "@maven//:org_jetbrains_kotlin_kotlin_test",
        "@maven//:org_jetbrains_kotlin_kotlin_test_junit5",
        "@maven//:org_jetbrains_kotlinx_kotlinx_serialization_json",
    ],
    test_resources = glob(["src/test/resources/**/*"]),
    test_resource_strip_prefix = "types/kotlin/src/test/resources",
    pom_template = ":pom.tpl",
)
